@@ -14,6 +14,7 @@
      FIXED: Audio output device selection on Mac OS X.
      FIXED: Properly store settings when using Save As function.
      FIXED: Crash when recording audio whith no rec directory set.
+     FIXED: Only allow audio playback while DSP is running.
   IMPROVED: Gqrx can fit on small screens (900x600 pixels).
 
 
